# genai

./: .env.example  .gitignore  CLAUDE.md  README.md  instructions.txt
backend/: database.py  evaluation.py  evaluation_results.json  main.py  metrics.py  models.py  orchestrator.py  pyproject.toml  requirements.txt  run_evaluation.py  validators.py
vscode-extension/: package-lock.json  package.json
vscode-extension/src/: api.ts  extension.ts
